[package]
name = "tokio-icmp"
version = "0.4.0"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>", "Jan Christian Grünhage <jan.christian@gruenhage.xyz"]
documentation = "https://docs.rs/tokio-icmp-echo"
repository = "https://github.com/jcgruenhage/tokio-icmp-echo"
description = "Asynchronous ICMP pinging library"
keywords = ["tokio", "icmp", "ping"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
futures-util = "0.3"
libc = "0.2"
mio = { version = "0.7", features = ["os-ext"] }
fastrand = "1.5"
socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1.9", features = ["rt", "time", "net", "sync"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.9", features = ["rt-multi-thread", "time", "macros"] }
